# rust_study

./: .gitignore  Cargo.toml  README.md  build  build.rs  cdylib_demo.h  git_clone  git_clone.bat  git_push
cdylib_demo/: Cargo.toml  README.md  build_ios
cdylib_demo/src/: lib.rs
compression_demo/: Cargo.toml  README.md
compression_demo/src/: main.rs
create_file_cli/: Cargo.toml  README.md  build  test_cli
create_file_cli/src/: args.rs  main.rs
create_placeholder_image/: Cargo.toml  README.md  build  build.bat  build_linux  run  run_create  run_resize
create_placeholder_image/src/: args.rs  main.rs
empty/: Cargo.toml  README.md  build
gcode_to_ydd/: Cargo.toml  build  build_linux  test_cli
gcode_to_ydd/src/: args.rs  main.rs  ydd.rs
gif_to_ild/: Cargo.toml  build  build.bat  build_linux  test_cli
gif_to_ild/src/: args.rs  main.rs
hex_to_bin_cli/: Cargo.toml  build  build.bat
hex_to_bin_cli/src/: main.rs
json_modify_cli/: Cargo.toml  build  build.bat  build_linux  test_cli
json_modify_cli/src/: args.rs  main.rs
macro_demo/: Cargo.toml
macro_demo/src/: main.rs
rc_test/: README.md
rc_test/src/: lib.rs
resize_image_cli/: Cargo.toml  build  build.bat  test_cli  test_cli.bat
resize_image_cli/src/: args.rs  main.rs
src/: main.rs
src/args/: mod.rs
src/https/: mod.rs
src/image/: mod.rs
src/mail/: mod.rs
src/protocol/: mod.rs
src/utils/: mod.rs
src/web/: mod.rs
studies/audio/: Cargo.toml
studies/audio/src/: lib.rs
study/: Cargo.toml  build  build.rs  test_bin
study/src/: main.rs
study/src/android/: mod.rs  shell.rs
study/src/badges/: mod.rs
study/src/files/: mod.rs
study/src/font/: mod.rs
study/src/geo/: mod.rs
study/src/https/: mod.rs
study/src/image/: mod.rs
study/src/lyon/: mod.rs
study/src/macros/: mod.rs
study/src/nalgebra/: mod.rs  shape_fitter.rs
study/src/pdf/: mod.rs
study/src/protocol/: mod.rs  shirt.proto
study/src/svg/: mod.rs
study/src/test/: mod.rs
study/src/threads/: mod.rs
study/src/threecrate/: mod.rs
study/src/utils/: file_utils.rs
study/src/web/: mod.rs
tests/: LX2.version
