[workspace]
edition = "2024"
resolver = "3"
members = [
    "study",
    "rust_crates/rc_basis",
    "rust_crates/rc_command",
    "rust_crates/rc_image",
    "rust_crates/rc_lyon",
    "rust_crates/rc_log",
    "rust_crates/rc_macro",
    "create_placeholder_image",
    "empty",
    "macro_demo",
    "cdylib_demo",
    "create_file_cli", 
    "gcode_to_ydd", 
    "gif_to_ild", "json_modify_cli", "studies/audio",
]

[profile.release]
#https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary. 4~mb
opt-level = "z"  # Optimize for size.
lto = true  # Perform link-time optimizations.
codegen-units = 1  # Compile the whole crate at once.
panic = "unwind"  # Abort on panic. 20~kb # unwind
