[package]
name = "resize_image_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# 命令行解析
# https://crates.io/crates/clap
clap = { version = "4.6.1", features = ["derive"] }
# https://crates.io/crates/clap_builder
clap_builder = "4.6.0"
# https://crates.io/crates/image
image = "0.25.10"
rc_image = { path = "../rust_crates/rc_image" }