[package]
name = "study"
version = "0.1.0"
edition = "2024"

[features]
# 是否激活protobuf编解码功能
enable_proto = []

[build-dependencies]
# Protobuf 编译工具
# https://crates.io/crates/prost-build
prost-build = "0.13.5"

[dependencies]
rc_basis = { path = "../rust_crates/rc_basis" }
rc_image = { path = "../rust_crates/rc_image" }
rc_log = { path = "../rust_crates/rc_log" }
rc_http = { path = "../rust_crates/rc_http" }

# HTTP 客户端
# https://crates.io/crates/reqwest
reqwest = { version = "0.12.15", features = ["json"] }
# 异步处理库
# https://crates.io/crates/tokio
tokio = { version = "1.45.0", features = ["full"] }
# https://crates.io/crates/html2md
html2md = "0.2.15"
# 命令终端多彩显示
# https://crates.io/crates/colored
colored = "3.0.0"
# JSON pretty print 格式化
# https://crates.io/crates/jsonxf
jsonxf = "1.1.1"
#  处理 mime 类型
# https://crates.io/crates/mime
mime = "0.3.17"
# 邮件发送
# https://crates.io/crates/mail-send
mail-send = "0.5.1"
# SMTP
# https://crates.io/crates/async-smtp
# async-smtp = "0.10.2"
# 邮件发送
# https://crates.io/crates/lettre
lettre = "0.11.16"

# web 框架
# https://crates.io/crates/axum
axum = "0.8.4"

# json序列化
# https://crates.io/crates/serde_json
serde_json = "1.0.140"

# 懒加载
# https://crates.io/crates/lazy_static
lazy_static = "1.5.0"
# LRU缓存
# https://crates.io/crates/lru
lru = "0.14.0"
# 图片处理
# https://crates.io/crates/photon-rs
photon-rs = "0.3.3"
# protobuf编解码
# https://crates.io/crates/prost
prost = "0.13.5"
# 路径处理
# https://crates.io/crates/pathos
pathos = "0.3.0"

# 获取Cargo.toml信息
# https://crates.io/crates/cargo_metadata
cargo_metadata = "0.20.0"
# windows系统信息
# https://crates.io/crates/windows-sys
windows-sys = "0.59.0"
# 终端处理
# https://crates.io/crates/fwdansi
fwdansi = "1.1.0"

# 终端处理
# https://crates.io/crates/is-terminal
is-terminal = "0.4.16"
#  终端处理
# https://crates.io/crates/termcolor
termcolor = "1.4.1"
# libc
# https://crates.io/crates/libc
libc = "0.2.172"
# pdfium
# https://crates.io/crates/pdfium-render
# pdfium-render = "0.8.31"
# pdf2image
# https://crates.io/crates/pdf2image
pdf2image = "0.1.3"

# 徽章生成
# A pure Rust library for generating SVG badges with an included binary
# https://crates.io/crates/badges
badges = "0.3.2"

# 线性代数库, 透视变换
# https://crates.io/crates/nalgebra
nalgebra = "0.33.2"

# Geospatial primitives and algorithms
# https://crates.io/crates/geo
geo = "0.30.0"
# Functionality to convert between SVG and geo-types
# https://crates.io/crates/geo-svg-io2
geo-svg-io2 = "0.2.0"
# https://crates.io/crates/geo-offset
geo-offset = "0.4.0"

# 2D Graphics rendering on the GPU using tessellation.
# https://crates.io/crates/lyon
lyon = "1.0.1"
# 2D quadratic and cubic bézier arcs and line segment math on top of euclid.
# https://crates.io/crates/lyon_geom/
lyon_geom = "1.0.6"
# Types and utilities to store, build and iterate over 2D paths."
# https://crates.io/crates/lyon_path/
lyon_path = "1.0.7"
# 2D Path manipulation/transformation algorithms.
# https://crates.io/crates/lyon_algorithms
lyon_algorithms = "1.0.5"
lyon_svg = "0.17.2"

# An SVG simplification library.
# https://crates.io/crates/usvg
usvg = "0.45.1"